@startuml

  namespace edu.kit.scc.dem.tuhl {
    namespace editor {
      class edu.kit.scc.dem.tuhl.editor.AnnotationService {
          + annotationVisibility()
          + createAnnotation()
          + deleteAnnotation()
          + getAnnotations()
          + getCurrentPage()
          + modifyAnnotation()
          + modifyAnnotation()
          + modifyAnnotation()
          + modifyMotivation()
          + validateAnnotation()
      }

      class edu.kit.scc.dem.tuhl.editor.EditorController {
          + EditorController()
          + addAnnotation()
          + addTag()
          + addTagToVocabulary()
          + addTextCard()
          + algorithmLayer()
          + changeDisplayedMetadata()
          + changePurpose()
          + changeVisibility()
          + deleteAnnotation()
          + deleteTag()
          + getAllMetadata()
          + getAllTags()
          + getRawMetadata()
          + selectPage()
          + updateAnnotation()
          + updateMotivation()
          + updateTextCard()
          + validateAnnotation()
      }

      class edu.kit.scc.dem.tuhl.editor.EditorService {
          - annotationsOnPage : Annotation[]
          - pagesInSlider : Page[]
          + addAnnotation()
          + addTag()
          + addTagToVocabulary()
          + addTextCard()
          + algorithmLayer()
          + changePage()
          + changeVisibility()
          + deleteAnnotation()
          + deleteTag()
          + displayMetadata()
          + displayRawMetadata()
          + getAllTags()
          + init()
          + updateColor()
          + updateMotivation()
          + updatePurpose()
          + updateSvg()
          + updateTextCard()
          + validateAnnotation()
      }

      interface edu.kit.scc.dem.tuhl.editor.IAnnotationService {
          {abstract} + annotationVisibility()
          {abstract} + createAnnotation()
          {abstract} + deleteAnnotation()
          {abstract} + getAnnotations()
          {abstract} + getCurrentPage()
          {abstract} + modifyAnnotation()
          {abstract} + modifyAnnotation()
          {abstract} + modifyAnnotation()
          {abstract} + modifyMotivation()
          {abstract} + validateAnnotation()
      }

      interface edu.kit.scc.dem.tuhl.editor.IEditorService {
          {abstract} + addAnnotation()
          {abstract} + addTag()
          {abstract} + addTagToVocabulary()
          {abstract} + addTextCard()
          {abstract} + algorithmLayer()
          {abstract} + changePage()
          {abstract} + changeVisibility()
          {abstract} + deleteAnnotation()
          {abstract} + deleteTag()
          {abstract} + displayMetadata()
          {abstract} + displayRawMetadata()
          {abstract} + getAllTags()
          {abstract} + init()
          {abstract} + updateColor()
          {abstract} + updateMotivation()
          {abstract} + updatePurpose()
          {abstract} + updateSvg()
          {abstract} + updateTextCard()
          {abstract} + validateAnnotation()
      }

      interface edu.kit.scc.dem.tuhl.editor.ITagService {
          {abstract} + addTag()
          {abstract} + addTagToVocabulary()
          {abstract} + deleteTag()
          {abstract} + getTagVocabulary()
          {abstract} + getTags()
      }

      interface edu.kit.scc.dem.tuhl.editor.ITextCardService {
          {abstract} + createTextCard()
          {abstract} + deleteTextCard()
          {abstract} + getTextCards()
          {abstract} + modifyPurpose()
          {abstract} + modifyTextCard()
      }

      class edu.kit.scc.dem.tuhl.editor.TagService {
          + addTag()
          + addTagToVocabulary()
          + deleteTag()
          + getTagVocabulary()
          + getTags()
      }

      class edu.kit.scc.dem.tuhl.editor.TextCardService {
          + createTextCard()
          + deleteTextCard()
          + getTextCards()
          + modifyPurpose()
          + modifyTextCard()
      }
    }
  }


  edu.kit.scc.dem.tuhl.editor.AnnotationService ..|> edu.kit.scc.dem.tuhl.editor.IAnnotationService
  edu.kit.scc.dem.tuhl.editor.AnnotationService o-up- edu.kit.scc.dem.tuhl.mainpage.search.ISearchIndexService : accessService
  edu.kit.scc.dem.tuhl.editor.EditorController o-right- edu.kit.scc.dem.tuhl.editor.IEditorService : editorService
  edu.kit.scc.dem.tuhl.editor.EditorService ..|> edu.kit.scc.dem.tuhl.editor.IEditorService
  edu.kit.scc.dem.tuhl.editor.EditorService o-right- edu.kit.scc.dem.tuhl.editor.IAnnotationService : annotationService
  edu.kit.scc.dem.tuhl.editor.EditorService o-up- edu.kit.scc.dem.tuhl.model.Annotation : currentAnnotation
  edu.kit.scc.dem.tuhl.editor.EditorService o-up- edu.kit.scc.dem.tuhl.model.Manuscript : currentManuscript
  edu.kit.scc.dem.tuhl.editor.EditorService o-down- edu.kit.scc.dem.tuhl.model.page.Page : currentPage
  edu.kit.scc.dem.tuhl.editor.EditorService o-up- edu.kit.scc.dem.tuhl.model.body.TextCard : currentTextCard
  edu.kit.scc.dem.tuhl.editor.EditorService o-right- edu.kit.scc.dem.tuhl.editor.ITagService : tagService
  edu.kit.scc.dem.tuhl.editor.EditorService o-right- edu.kit.scc.dem.tuhl.editor.ITextCardService : textCardService
  edu.kit.scc.dem.tuhl.editor.TagService ..|> edu.kit.scc.dem.tuhl.editor.ITagService
  edu.kit.scc.dem.tuhl.editor.TagService o-up- edu.kit.scc.dem.tuhl.mainpage.search.ISearchIndexService : accessService
  edu.kit.scc.dem.tuhl.editor.TextCardService ..|> edu.kit.scc.dem.tuhl.editor.ITextCardService
  edu.kit.scc.dem.tuhl.editor.TextCardService o-up- edu.kit.scc.dem.tuhl.mainpage.search.ISearchIndexService : accessService

@enduml
